    - added include_php built-in function. (Monte)
    - added trusted_dir functionality, documented. (Monte)
    - consolidated secure_dir tests to one function. (Monte)
    - prepended _smarty_ to variable names in fetch() class function to avoid
      namespace conflicts. (Monte)
    - introduced $compile_id class variable that can be used to set persistent
      compile identifier across multiple display calls, documented. (Andrei)
    - fixed bug with concatenated null cache and compile identifiers. (Andrei)
    - added $smarty.section.* syntax for accessing section properties,
      documented. (Andrei)
    - added custom cache handling function ability, documented. (Monte)
    - added assign attribute to insert, fetch, math, and counter functions,
      documented. (Monte)
    - fixed bug with fetch testing for local file when http address. (Monte)
    - fixed bug with counter and skipval setting. (Monte)
    - made {config_load ...} merge globals from each config file only once per
      scope, thus avoiding several problems. (Andrei)
    - added {foreach ...} tag that can be used to iterate through
      non-sequential and associative arrays, documented. (Andrei)
    - speeded up section property access a bit. (Andrei)
    - removed $smarty variable from storage used by normal template variables,
      to prevent any problems. (Andrei)
    - fixed a bug that could cause parse error with quotes inside literal
      blocks. (Andrei, Alexander Belonosov)
    - added 'field_array' attribute to html_select_time function, documented.
      (Andrei, Michael Caplan)
    - documented {section} "max" attribute. (Monte)
    - fixed notice message in Smarty_Compiler.class.php. (Monte)
    - fixed bug with clear_cache introduced in 1.4.6, third parameter should
      default to null. (Monte)
    - updated Config_File class to support '\' path separator in OS/2. (Monte,
      Francesco Cipriani)
    - removed secure_ext setting (not used). (Monte)